--- a/src/static/css/views/footer.css
+++ b/src/static/css/views/footer.css
@@ -2,5 +2,5 @@ footer {
   margin: auto 0 0;
   padding: var(--vertical-whitespace) 0 1rem;
   text-align: center;
-  opacity: 0.5;
+  opacity: 0.4;
 }
